--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en" class="h-full">
-
 <head>
   <meta charset="utf-8" />
   <title>AutoVINReveal</title>
@@ -10,7 +9,10 @@
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = { darkMode: 'class', theme: { extend: { colors: { brand: { DEFAULT: '#2563eb', dark: '#1d4ed8' } } } } };
+    tailwind.config = {
+      darkMode: 'class',
+      theme: { extend: { colors: { brand: { DEFAULT: '#2563eb', dark: '#1d4ed8' } } } }
+    };
   </script>
 
   <!-- Apply dark mode BEFORE paint -->
@@ -57,11 +59,57 @@
             <label class="lbl">State</label>
             <select name="state" class="select">
               <option value="">Select a state…</option>
+              <!-- 50 U.S. states -->
+              <option value="AL">Alabama</option>
+              <option value="AK">Alaska</option>
+              <option value="AZ">Arizona</option>
+              <option value="AR">Arkansas</option>
               <option value="CA">California</option>
-              <option value="NY">New York</option>
-              <option value="TX">Texas</option>
+              <option value="CO">Colorado</option>
+              <option value="CT">Connecticut</option>
+              <option value="DE">Delaware</option>
               <option value="FL">Florida</option>
-              <option value="ON">Ontario</option>
+              <option value="GA">Georgia</option>
+              <option value="HI">Hawaii</option>
+              <option value="ID">Idaho</option>
+              <option value="IL">Illinois</option>
+              <option value="IN">Indiana</option>
+              <option value="IA">Iowa</option>
+              <option value="KS">Kansas</option>
+              <option value="KY">Kentucky</option>
+              <option value="LA">Louisiana</option>
+              <option value="ME">Maine</option>
+              <option value="MD">Maryland</option>
+              <option value="MA">Massachusetts</option>
+              <option value="MI">Michigan</option>
+              <option value="MN">Minnesota</option>
+              <option value="MS">Mississippi</option>
+              <option value="MO">Missouri</option>
+              <option value="MT">Montana</option>
+              <option value="NE">Nebraska</option>
+              <option value="NV">Nevada</option>
+              <option value="NH">New Hampshire</option>
+              <option value="NJ">New Jersey</option>
+              <option value="NM">New Mexico</option>
+              <option value="NY">New York</option>
+              <option value="NC">North Carolina</option>
+              <option value="ND">North Dakota</option>
+              <option value="OH">Ohio</option>
+              <option value="OK">Oklahoma</option>
+              <option value="OR">Oregon</option>
+              <option value="PA">Pennsylvania</option>
+              <option value="RI">Rhode Island</option>
+              <option value="SC">South Carolina</option>
+              <option value="SD">South Dakota</option>
+              <option value="TN">Tennessee</option>
+              <option value="TX">Texas</option>
+              <option value="UT">Utah</option>
+              <option value="VT">Vermont</option>
+              <option value="VA">Virginia</option>
+              <option value="WA">Washington</option>
+              <option value="WV">West Virginia</option>
+              <option value="WI">Wisconsin</option>
+              <option value="WY">Wyoming</option>
             </select>
           </div>
           <div>
@@ -120,11 +168,11 @@
       </div>
     </div>
 
-    <!-- Login Modal -->
+    <!-- Login / Signup Modal -->
     <div id="loginModal" class="hidden fixed inset-0 bg-black/50 z-50 flex items-center justify-center">
       <div class="card w-[420px] max-w-[92vw]">
         <div class="flex items-center justify-between mb-3">
-          <h2 class="text-lg font-semibold">Sign in</h2>
+          <h2 class="text-lg font-semibold">Account</h2>
           <button id="closeLoginModal" class="btn-outline text-xs">✕</button>
         </div>
 
@@ -136,19 +184,16 @@
           <input id="loginPassword" type="password" class="input" placeholder="••••••••" />
         </div>
 
+        <p id="authHint" class="text-xs mt-2 hidden" style="color:var(--muted)"></p>
+
         <div class="mt-4 grid grid-cols-2 gap-2">
           <button id="doLogin" class="btn btn-primary">Sign in</button>
           <button id="doSignup" class="btn-outline">Create account</button>
         </div>
-
-        <p class="text-xs mt-3" style="color:var(--muted)">
-          Tip: you can also buy credits without signing in — Stripe will just ask for your card info.
-        </p>
       </div>
     </div>
 
-
-    <!-- History -->
+    <!-- Results History -->
     <div class="mt-8">
       <div class="flex items-center justify-between mb-2">
         <h2 class="text-lg font-semibold">Results History</h2>
@@ -169,20 +214,39 @@
         </table>
       </div>
     </div>
+
+    <!-- Purchase History (visible when signed in) -->
+    <div id="purchasesWrap" class="mt-8 hidden">
+      <div class="flex items-center justify-between mb-2">
+        <h2 class="text-lg font-semibold">Purchase History</h2>
+        <button id="refreshPurchases" class="btn-outline text-sm">Refresh</button>
+      </div>
+      <div class="table-wrap rounded-xl">
+        <table class="min-w-full text-sm">
+          <thead>
+            <tr>
+              <th class="th">Date</th>
+              <th class="th">Amount</th>
+              <th class="th">Currency</th>
+              <th class="th">Status</th>
+            </tr>
+          </thead>
+          <tbody id="purchasesBody"></tbody>
+        </table>
+      </div>
+    </div>
+
   </div>
 
   <!-- Toasts -->
   <div id="toastBox" class="fixed top-4 right-4 space-y-2 z-50"></div>
 
-   <script>
+  <script>
     window.VITE_SUPABASE_URL = "https://vvajqnljwvhjgdtxqzfl.supabase.co";
-    window.VITE_SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ2YWpxbmxqd3ZoamdkdHhxemZsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk1NTg5NjIsImV4cCI6MjA3NTEzNDk2Mn0.Q4g5Slr3mpHrATgh03sSQ4gBVlpwtIZ8ioSmCa2GFv4"; // your anon key
+    window.VITE_SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ2YWpxbmxqd3ZoamdkdHhxemZsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk1NTg5NjIsImV4cCI6MjA3NTEzNDk2Mn0.Q4g5Slr3mpHrATgh03sSQ4gBVlpwtIZ8ioSmCa2GFv4";
   </script>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-  <!-- IMPORTANT: module script so imports work -->
   <script type="module" src="/app.js"></script>
 </body>
-
 </html>
