--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
       <div class="card max-w-sm text-center">
         <h2 class="text-lg font-bold mb-2">Not Enough Credits</h2>
         <p class="mb-4 text-sm" style="color:var(--muted)">You need credits to view a report.</p>
-        <button id="buyNowBtn" class="btn btn-primary w-full">Buy 1 Credits ($10)</button>
+        <button id="buyNowBtn" class="btn btn-primary w-full">Buy 1 Credits ($10 CAD/ $7 USD)</button>
         <button id="closeModalBtn" class="btn-outline w-full mt-3">Cancel</button>
       </div>
     </div>
