--- a/public/terms.html
+++ b/public/terms.html
@@ -30,7 +30,7 @@
   <div class="max-w-3xl mx-auto p-6">
     <!-- Header -->
     <header class="flex items-center justify-between">
-      <a href="/" class="text-2xl font-semibold text-[rgb(153,120,77)]">AutoVINReveal</a>
+      <a href="/" class="text-6xl font-bold text-[rgb(153,120,77)]">AutoVINReveal</a>
       <a href="/" class="btn-outline text-sm">← Back</a>
     </header>
 
