--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
+
 <!doctype html>
 <html lang="en" class="h-full">
+
 <head>
   <meta charset="utf-8" />
   <title>AutoVINReveal</title>
@@ -23,16 +25,21 @@
     })();
   </script>
 </head>
+
 <body class="h-full">
   <div class="max-w-3xl mx-auto p-6">
     <!-- Header -->
     <div class="flex items-center justify-between">
-      <h1 class="text-3xl text-[rgb(153,120,77)]">AutoVINReveal</h1>
+      <a href="/" 
+   class="text-4xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm">
+  AutoVINReveal
+</a>
+
       <div class="flex gap-3">
         <button id="themeBtn" class="theme-btn">
           <span class="icon">🌙</span><span class="label">Dark</span>
         </button>
-         <!--   <button id="loginBtn" class="btn-outline">🔑 Login</button>  -->
+        <!--   <button id="loginBtn" class="btn-outline">🔑 Login</button>  -->
       </div>
     </div>
 
@@ -213,6 +220,11 @@
       <a class="underline" href="/privacy.html">Privacy Policy</a>
       <span>•</span>
       <a class="underline" href="/terms.html">Terms of Use</a>
+      <a class="underline" href="https://mail.google.com/mail/?view=cm&fs=1&to=autovinreveal%40gmail.com">
+        Contact Us
+      </a>
+
+
     </div>
   </div>
 
@@ -226,21 +238,22 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <!-- Boot/Warmup Overlay -->
-<div id="bootOverlay" class="hidden fixed inset-0 bg-black/60 z-[1000] flex items-center justify-center">
-  <div class="card max-w-sm w-[92%] text-center">
-    <div class="mb-3 flex items-center justify-center">
-      <svg class="w-8 h-8 animate-spin" viewBox="0 0 24 24">
-        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" fill="none" stroke-width="4"></circle>
-        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
-      </svg>
+  <div id="bootOverlay" class="hidden fixed inset-0 bg-black/60 z-[1000] flex items-center justify-center">
+    <div class="card max-w-sm w-[92%] text-center">
+      <div class="mb-3 flex items-center justify-center">
+        <svg class="w-8 h-8 animate-spin" viewBox="0 0 24 24">
+          <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" fill="none" stroke-width="4"></circle>
+          <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8v4a4 4 0 00-4 4H4z"></path>
+        </svg>
+      </div>
+      <h2 class="text-lg font-semibold mb-1">Warming up…</h2>
+      <p class="text-sm" style="color:var(--muted)">
+        Our free server may take 20–60s to start. Thanks for your patience.
+      </p>
     </div>
-    <h2 class="text-lg font-semibold mb-1">Warming up…</h2>
-    <p class="text-sm" style="color:var(--muted)">
-      Our free server may take 20–60s to start. Thanks for your patience.
-    </p>
   </div>
-</div>
 
   <script type="module" src="/app.js"></script>
 </body>
+
 </html>
