--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en" class="h-full">
 
@@ -29,20 +28,25 @@
 <body class="h-full">
   <div class="max-w-3xl mx-auto p-6">
     <!-- Header -->
-    <div class="flex items-center justify-between">
-      <a href="/" 
-   class="text-4xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm">
-  AutoVINReveal
-</a>
+     <div class="max-w-6xl mx-auto px-6 lg:px-10 py-6">
+    <!-- Hero: brand + theme toggle -->
+    <div class="flex items-start justify-between gap-4">
+      <div>
+        <a href="/"
+           class="text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm tracking-tight">
+          AutoVINReveal
+        </a>
+        <p class="mt-2 text-base lg:text-lg" style="color:var(--muted)">
+          Get instant CARFAX & AutoCheck by VIN or Plate — fast, secure, and clear.
+        </p>
+      </div>
 
       <div class="flex gap-3">
-        <button id="themeBtn" class="theme-btn">
+        <button id="themeBtn" class="theme-btn" type="button" aria-label="Toggle theme">
           <span class="icon">🌙</span><span class="label">Dark</span>
         </button>
-        <!--   <button id="loginBtn" class="btn-outline">🔑 Login</button>  -->
       </div>
     </div>
-
     <!-- Form card -->
     <div class="relative mt-6 card">
       <form id="f" class="space-y-4">
