--- a/public/index.html
+++ b/public/index.html
@@ -26,27 +26,31 @@
 </head>
 
 <body class="h-full">
-  <div class="max-w-4xl mx-auto p-6">
+  <div class="max-w-3xl mx-auto p-6">
     <!-- Header -->
-     <div class="max-w-6xl mx-auto px-6 lg:px-10 py-6">
-    <!-- Hero: brand + theme toggle -->
-    <div class="flex items-start justify-between gap-4">
+
+
+    <div class="flex items-center justify-between">
       <div>
         <a href="/"
-           class="text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm tracking-tight">
+          class="text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm tracking-tight">
           AutoVINReveal
         </a>
         <p class="mt-2 text-base lg:text-lg" style="color:var(--muted)">
           Get instant CARFAX & AutoCheck by VIN or Plate — fast, secure, and clear.
         </p>
       </div>
-
       <div class="flex gap-3">
-        <button id="themeBtn" class="theme-btn" type="button" aria-label="Toggle theme">
+        <button id="themeBtn" class="theme-btn">
           <span class="icon">🌙</span><span class="label">Dark</span>
         </button>
+        <!--   <button id="loginBtn" class="btn-outline">🔑 Login</button>  -->
       </div>
     </div>
+
+
+
+
     <!-- Form card -->
     <div class="relative mt-6 card">
       <form id="f" class="space-y-4">
@@ -133,6 +137,7 @@
             <select name="type" class="select">
               <option value="carfax">CARFAX</option>
               <option value="autocheck">AutoCheck</option>
+
             </select>
           </div>
           <!-- Format dropdown removed -->
@@ -205,15 +210,15 @@
       </div>
       <div class="table-wrap rounded-xl">
         <table class="min-w-full text-sm">
-          <thead>
+          <thead class="bg-[color:var(--tableHead)] text-left text-sm font-semibold" style="color:var(--muted)">
             <tr>
-              <th class="th">VIN</th>
-              <th class="th">Type</th>
-              <th class="th">Available</th>
-              <th class="th">Time</th>
-              <th class="th">Action</th>
+              <th class="px-4 py-3 w-[35%]">VIN</th>
+              <th class="px-4 py-3 w-[15%]">Type</th>
+              <th class="px-4 py-3 w-[20%]">Time</th>
+              <th class="px-4 py-3 w-[10%] text-right">Action</th>
             </tr>
           </thead>
+
           <tbody id="historyBody"></tbody>
         </table>
       </div>
@@ -224,11 +229,6 @@
       <a class="underline" href="/privacy.html">Privacy Policy</a>
       <span>•</span>
       <a class="underline" href="/terms.html">Terms of Use</a>
-      <a class="underline" href="https://mail.google.com/mail/?view=cm&fs=1&to=autovinreveal%40gmail.com">
-        Contact Us
-      </a>
-
-
     </div>
   </div>
 
