--- a/public/terms.html
+++ b/public/terms.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en" class="h-full">
 <head>
+
+  
   <meta charset="utf-8" />
   <title>Terms of Service · AutoVINReveal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -25,6 +27,15 @@
       }
     })();
   </script>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FF0NXRN0Y6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FF0NXRN0Y6');
+</script>
 </head>
 <body class="h-full">
   <div class="max-w-3xl mx-auto p-6">
