--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,26 @@
 <html lang="en" class="h-full">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FF0NXRN0Y6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FF0NXRN0Y6');
+</script><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FF0NXRN0Y6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FF0NXRN0Y6');
+</script>
+
+
   <meta charset="utf-8" />
   <title>AutoVINReveal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
