--- a/public/index.html
+++ b/public/index.html
@@ -194,8 +194,8 @@
         <h2 class="text-lg font-bold mb-2">Get Credits</h2>
         <p class="mb-4 text-sm" style="color:var(--muted)">Buy a single credit or save with a 10-pack.</p>
         <div class="grid gap-2">
-          <button id="buy1Btn" class="btn btn-primary w-full">Buy 1 Credit — $10</button>
-          <button id="buy10Btn" class="btn btn-outline w-full">Buy 10 Credits — $80 ($8 each)</button>
+          <button id="buy1Btn" class="btn btn-primary w-full">Buy 1 Credit — $7 USD </button>
+          <button id="buy10Btn" class="btn btn-outline w-full">Buy 10 Credits — $50 USD ($5 each)</button>
         </div>
         <button id="closeModalBtn" class="btn-outline w-full mt-4">Cancel</button>
       </div>
