--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/style.css">
 
+  
+  <!-- ✅ SEO Meta -->
+  <meta name="description" content="Get instant CARFAX & AutoCheck vehicle history reports by VIN or license plate. Fast, secure, and easy — powered by AutoVINReveal.">
+  <meta name="keywords" content="autovinreveal, carfax, autocheck, vin lookup, license plate search, vehicle report, auto history, used car check">
+
+  <!-- ✅ Open Graph / Social Preview -->
+  <meta property="og:title" content="AutoVINReveal — Instant CARFAX & AutoCheck Reports">
+  <meta property="og:description" content="Get CARFAX or AutoCheck instantly by VIN or Plate. Fast, secure, and accurate vehicle history reports.">
+  <meta property="og:image" content="https://autovinreveal.com/og-image.png">
+  <meta property="og:image:alt" content="AutoVINReveal Vehicle History Report Preview">
+  <meta property="og:url" content="https://autovinreveal.com">
+  <meta property="og:type" content="website">
+
+  <!-- ✅ Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="AutoVINReveal — Instant CARFAX & AutoCheck Reports">
+  <meta name="twitter:description" content="Check vehicle history reports by VIN or plate instantly with AutoVINReveal.">
+  <meta name="twitter:image" content="https://autovinreveal.com/og-image.png">
+
+  <!-- ✅ Favicon + App Icons -->
+  <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32">
+  <link rel="apple-touch-icon" href="/favicon.png">
+  <meta name="theme-color" content="#1d4ed8">
+
+  <!-- ✅ Preload hero/og image -->
+  <link rel="preload" as="image" href="/og-image.png" imagesrcset="/og-image.png 1200w" imagesizes="100vw">
+
+
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
