--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,23 @@
 </head>
 
 <body class="h-full">
+
+   <script>
+    fbq('track', 'Purchase', {
+      value: 7.00,
+      currency: 'USD',
+      contents: [
+        {
+          id: 'VinReport',
+          quantity: 1
+        }
+      ],
+      content_ids: ['VinReport'],
+      content_type: 'product'
+    });
+  </script>
+
+  
   <div class="max-w-5xl mx-auto px-4 py-6">
     <!-- Header -->
     <header class="grid grid-cols-1 sm:grid-cols-[1fr_auto] items-start gap-3">
