--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,15 @@
   <link rel="stylesheet" href="/style.css">
 
   <!-- ✅ SEO Meta -->
-  <meta name="description" content="Get instant CARFAX & AutoCheck vehicle history reports by VIN or license plate. Fast, secure, and easy — powered by AutoVINReveal.">
-  <meta name="keywords" content="autovinreveal, carfax, autocheck, vin lookup, license plate search, vehicle report, auto history, used car check">
+  <meta name="description"
+    content="Get instant CARFAX & AutoCheck vehicle history reports by VIN or license plate. Fast, secure, and easy — powered by AutoVINReveal.">
+  <meta name="keywords"
+    content="autovinreveal, carfax, autocheck, vin lookup, license plate search, vehicle report, auto history, used car check">
 
   <!-- ✅ Open Graph / Social Preview -->
   <meta property="og:title" content="AutoVINReveal — Instant CARFAX & AutoCheck Reports">
-  <meta property="og:description" content="Get CARFAX or AutoCheck instantly by VIN or Plate. Fast, secure, and accurate vehicle history reports.">
+  <meta property="og:description"
+    content="Get CARFAX or AutoCheck instantly by VIN or Plate. Fast, secure, and accurate vehicle history reports.">
   <meta property="og:image" content="https://autovinreveal.com/og-image.png">
   <meta property="og:image:alt" content="AutoVINReveal Vehicle History Report Preview">
   <meta property="og:url" content="https://autovinreveal.com">
@@ -30,7 +33,8 @@
   <!-- ✅ Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="AutoVINReveal — Instant CARFAX & AutoCheck Reports">
-  <meta name="twitter:description" content="Check vehicle history reports by VIN or plate instantly with AutoVINReveal.">
+  <meta name="twitter:description"
+    content="Check vehicle history reports by VIN or plate instantly with AutoVINReveal.">
   <meta name="twitter:image" content="https://autovinreveal.com/og-image.png">
 
   <!-- ✅ Favicon + App Icons -->
@@ -42,9 +46,9 @@
   <link rel="preload" as="image" href="/og-image.png" imagesrcset="/og-image.png 1200w" imagesizes="100vw">  -->
 
   <!-- Tailwind -->
-<link rel="stylesheet" href="/tw.css">
+  <link rel="stylesheet" href="/tw.css">
 
- 
+
   <!-- Apply dark mode BEFORE paint -->
   <script>
     (() => {
@@ -55,64 +59,87 @@
   </script>
 
   <!-- ✅ PayPal JS SDK (Sandbox). Swap client-id to LIVE in production -->
-  <script src="https://www.paypal.com/sdk/js?client-id=Aclv8-_pnwQ7RC6rFmyLTxPfEqSNC2yS67N3dFeTwGH2i8-K2LVwwPEMmcfuw-DOxcuDWsPpoaSs7HOU&components=buttons&currency=USD"></script>
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=Aclv8-_pnwQ7RC6rFmyLTxPfEqSNC2yS67N3dFeTwGH2i8-K2LVwwPEMmcfuw-DOxcuDWsPpoaSs7HOU&components=buttons&currency=USD"></script>
+
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1059594989434590');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1059594989434590&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body class="h-full">
 
-   <script>
-  fbq('track', 'Purchase', {
-    value: 7.00,
-    currency: 'USD',
-    contents: [
+  <script>
+    fbq('track', 'Purchase', {
+      value: 7.00,
+      currency: 'USD',
+      contents: [
         {
-            id: 'VINReport',
-            quantity: 1
+          id: 'VINReport',
+          quantity: 1
         }
-    ],
-    content_ids: 'VINReport',
-  });
-</script>
+      ],
+      content_ids: 'VINReport',
+    });
+  </script>
 
-  
+
   <div class="max-w-5xl mx-auto px-4 py-6">
     <!-- Header -->
     <header class="grid grid-cols-1 sm:grid-cols-[1fr_auto] items-start gap-3">
-  <div>
-    <!-- title + subtitle -->
-    <a href="/" class="text-4xl sm:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm tracking-tight">
-      AutoVINReveal
-    </a>
-    <p class="mt-1 sm:mt-2 text-sm sm:text-base lg:text-lg" style="color:var(--muted)">
-      Get instant CARFAX & AutoCheck by VIN or Plate — fast, secure, and clear.
-    </p>
-  </div>
-
-  <!-- RIGHT SIDE -->
-  <div class="justify-self-end flex items-center gap-2">
-    <div id="balancePill" class="hidden text-xs px-2 py-1 rounded-full border"
-         style="color:var(--brand);border-color:color-mix(in srgb,var(--brand) 60%, transparent);">
-      <span id="balanceText">0 credits</span>
-    </div>
-
-    <div id="userChip" class="hidden items-center gap-2">
-      <div class="w-8 h-8 rounded-full border border-blue-500/40 bg-blue-500/10 grid place-items-center text-blue-600">
-        <svg class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8">
-          <circle cx="12" cy="8" r="4"></circle>
-          <path d="M6 20c0-3.3 2.7-6 6-6s6 2.7 6 6" stroke-linecap="round"></path>
-        </svg>
+      <div>
+        <!-- title + subtitle -->
+        <a href="/"
+          class="text-4xl sm:text-5xl lg:text-6xl font-extrabold bg-gradient-to-r from-[rgb(153,120,77)] via-amber-400 to-yellow-600 bg-clip-text text-transparent drop-shadow-sm tracking-tight">
+          AutoVINReveal
+        </a>
+        <p class="mt-1 sm:mt-2 text-sm sm:text-base lg:text-lg" style="color:var(--muted)">
+          Get instant CARFAX & AutoCheck by VIN or Plate — fast, secure, and clear.
+        </p>
       </div>
-      <span id="userEmail" class="text-sm"></span>
-      <button id="logoutBtn" class="btn-outline text-xs">Sign out</button>
-    </div>
 
-    <button id="loginBtn" class="btn-outline text-sm">🔑 Login</button>
+      <!-- RIGHT SIDE -->
+      <div class="justify-self-end flex items-center gap-2">
+        <div id="balancePill" class="hidden text-xs px-2 py-1 rounded-full border"
+          style="color:var(--brand);border-color:color-mix(in srgb,var(--brand) 60%, transparent);">
+          <span id="balanceText">0 credits</span>
+        </div>
 
-    <button id="themeBtn" class="theme-btn shrink-0" type="button" aria-label="Toggle theme">
-      <span class="icon">🌙</span><span class="label">Dark</span>
-    </button>
-  </div>
-</header>
+        <div id="userChip" class="hidden items-center gap-2">
+          <div
+            class="w-8 h-8 rounded-full border border-blue-500/40 bg-blue-500/10 grid place-items-center text-blue-600">
+            <svg class="w-4 h-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8">
+              <circle cx="12" cy="8" r="4"></circle>
+              <path d="M6 20c0-3.3 2.7-6 6-6s6 2.7 6 6" stroke-linecap="round"></path>
+            </svg>
+          </div>
+          <span id="userEmail" class="text-sm"></span>
+          <button id="logoutBtn" class="btn-outline text-xs">Sign out</button>
+        </div>
+
+        <button id="loginBtn" class="btn-outline text-sm">🔑 Login</button>
+
+        <button id="themeBtn" class="theme-btn shrink-0" type="button" aria-label="Toggle theme">
+          <span class="icon">🌙</span><span class="label">Dark</span>
+        </button>
+      </div>
+    </header>
 
 
     <!-- Form card -->
@@ -332,4 +359,5 @@
 
   <script type="module" src="/app.js"></script>
 </body>
+
 </html>
