--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -87,11 +87,10 @@
 
   <script>
     fbq('track', 'Purchase', {
-      value: 7.00,
       currency: 'USD',
       contents: [
         {
-          id: 'VINReport',
+          id: 'Report',
           quantity: 1
         }
       ],
